<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardproducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="5dp"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="20dp"
        app:cardForegroundColor="@color/foregn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#3B474747"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:id="@+id/txt_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID"
                app:layout_constraintBottom_toTopOf="@id/tile_divider"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/txt_nomProducto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/nombre_producto"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toTopOf="@id/tile_divider"
                app:layout_constraintStart_toEndOf="@id/txt_id"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/tile_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/design_default_color_secondary"
                app:layout_constraintBottom_toTopOf="@id/lbl_descripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_nomProducto" />

            <TextView
                android:id="@+id/lbl_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/descripcion"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintBottom_toTopOf="@id/txt_descripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tile_divider" />

            <TextView
                android:id="@+id/txt_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_producto"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintBottom_toTopOf="@id/tile_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_descripcion" />

            <View
                android:id="@+id/tile_divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/design_default_color_secondary"
                app:layout_constraintBottom_toTopOf="@id/Tab_precio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_descripcion" />

            <TableLayout
                android:id="@+id/Tab_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/divider"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tile_divider1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precio"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/txt_precio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/numPrecio"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/txt_cantidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/numCant"
                        android:textColor="@color/colorAccent" />
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>