<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">

    <TextView
        android:id="@+id/lbl_nomLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Prodcutos"
        android:fontFamily="@font/poppinsbold"
        android:textColor="#000"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintBottom_toTopOf="@id/frameAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/frameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_nomLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:textColorHint="@color/colorAccent"
                app:boxBackgroundColor="@color/design_default_color_on_primary"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomProducto"
                android:textColorHint="@color/colorAccent"
                app:boxBackgroundColor="@color/design_default_color_on_primary"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtdescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:textColorHint="@color/colorAccent"
            app:boxBackgroundColor="@color/design_default_color_on_primary"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:errorTextColor="@color/error"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtcantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cantidad"
                android:textColorHint="@color/colorAccent"
                app:boxBackgroundColor="@color/design_default_color_on_primary"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtprecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/precio"
                android:textColorHint="@color/colorAccent"
                app:boxBackgroundColor="@color/design_default_color_on_primary"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:errorTextColor="@color/error"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:text="Actualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameAdd" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="Eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/btn_update"
        app:layout_constraintTop_toBottomOf="@id/frameAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>