<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cliente_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">



            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/lbl_productos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/productos"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textColor="#fff"
                    tools:ignore="UnusedAttribute" />



            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/bienvenido"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/txtNomAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/nombres_administrador"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="60dp"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="140dp" />

            <ImageView
                android:id="@+id/btn_refresh"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="300dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="60dp"
                android:clickable="true"
                android:onClick="onClickRefresch"
                android:src="@android:drawable/stat_notify_sync_noanim" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:onClick="onInstaceAdd"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>